[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmux"
version = "0.1.0"
description = "The LLM multiplexer, embedded locally — one OpenAI-compatible client for every provider."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["llm", "gateway", "openai", "anthropic", "gemini", "proxy", "litellm"]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.urls]
Homepage = "https://llmux.to"

[tool.hatch.build.targets.wheel]
packages = ["llmux"]

# In real distribution, platform-specific wheels bundle the binary under
# llmux/bin/. The artifact is produced by the Go build in CI per OS/arch.
[tool.hatch.build.targets.wheel.force-include]
"llmux/bin" = "llmux/bin"
